force-app/main/default/objects/Peer_Network__c/Peer_Network__c.object-meta.xml
<CustomObject>
    <description>This object contains surgeon peer relationship information that was purchased from Q2.  This data is purchased on loaded on an annual basis.  The relationship types include: Education, Hospital Privileges and Speaking Engagements.</description>
    <label>Peer Network</label>
    <nameField>
        <displayFormat>PN-{000000000}</displayFormat>
        <label>Peer Network ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peer Network</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>