force-app/main/default/objects/Peer_Network__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Master doctor record for EU records</description>
    <label>Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Peer Network</relationshipLabel>
    <relationshipName>Peer_Network</relationshipName>
    <type>Lookup</type>
</CustomField>