force-app/main/default/objects/Peer_Network__c/fields/Peer_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Peer_Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Peer contact records to attach EU Doctors</description>
    <label>Peer Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Peer Network (Peer Doctor)</relationshipLabel>
    <relationshipName>Peer_Network1</relationshipName>
    <type>Lookup</type>
</CustomField>