force-app/main/default/objects/Peer_Network__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field contains the type of peer network that has been established.  Some of the types included are: Education, HCF Connections, Authorship, etc...</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>